rust/crates/spek/src/snapshots/spek__notation__tests__C.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{note:?}{result:.0}\")"
---
Note { pitch: C, accs: [], octave: None, cents: None }12
