rust/crates/spek/src/snapshots/spek__notation__tests__double_flat.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\")"
---
C𝄫
Note { pitch: C, accs: [DoubleFlat], octave: None, cents: None }
