rust/crates/spek/src/snapshots/spek__notation__tests__double_flat_octave.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\")"
---
C𝄫4
Note { pitch: C, accs: [DoubleFlat], octave: Some(4), cents: None }
