rust/crates/spek/src/snapshots/spek__notation__tests__double_sharp.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\")"
---
C𝄪
Note { pitch: C, accs: [DoubleSharp], octave: None, cents: None }
