rust/crates/spek/src/snapshots/spek__notation__tests__flat.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\\n{result}\")"
---
Cb
Note { pitch: C, accs: [Flat], octave: None, cents: None }
C♭
