rust/crates/spek/src/snapshots/spek__notation__tests__flat_octave.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\")"
---
Cb4
Note { pitch: C, accs: [Flat], octave: Some(4), cents: None }
