rust/crates/spek/src/snapshots/spek__notation__tests__flat_octave_cents.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\")"
---
Cb+4+25
Note { pitch: C, accs: [Flat], octave: Some(4), cents: Some(25) }
