rust/crates/spek/src/snapshots/spek__notation__tests__flat_positive_octave.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\\n{result}\")"
---
C♭+4
Note { pitch: C, accs: [Flat], octave: Some(4), cents: None }
C♭4
