rust/crates/spek/src/snapshots/spek__notation__tests__flat_unicode.snap
---
source: crates/spek/src/notation.rs
expression: "format!(\"{input}\\n{result:?}\")"
---
C♭
Note { pitch: C, accs: [Flat], octave: None, cents: None }
